feat: add Jakarta EE analysis semantics